k8s/backendDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hapi-svc-deployment
spec:
  selector:
    matchLabels:
      app: hapi-svc
  template:
    metadata:
      labels:
        app: hapi-svc
    spec:
      containers:
      - name: hapi-svc
        image: nauvalshidqi/hapi-svc:1.2
        resources:
          limits:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - containerPort: 3000
