k8s/backendService.yaml
apiVersion: v1
kind: Service
metadata:
  name: hapi-svc-clusterip
spec:
  selector:
    app: hapi-svc
  ports:
  - port: 3000
    targetPort: 3000
