k8s/eksDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hapi-svc-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hapi-svc
  template:
    metadata:
      labels:
        app: hapi-svc
    spec:
      containers:
      - name: hapi-svc
        image: 904368539180.dkr.ecr.ap-southeast-2.amazonaws.com/hapi-svc
        resources:
          limits:
            memory: "128Mi"
            cpu: "300m"
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: hapi-svc-clusterip
spec:
  type: LoadBalancer
  selector:
    app: hapi-svc
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
