k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hapi-ingress
  labels:
    name: hapi-ingress
spec:
  rules:
  - host: nauvaldev.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hapi-svc-clusterip
            port: 
              number: 3000
